[package]
description = "Enum flag generator proc macros"
edition = "2021"
keywords = ["flag", "enum"]
license = "MIT"
name = "flagger-macros"
repository = "https://github.com/rick-de-water/flagger"
version = "0.5.0"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }

[lib]
proc-macro = true